--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,4 +2,8 @@
 # defaults file for ansible-qualys-cloud-agent
 qualys_agent_pkg_state_latest: no
 qualys_agent_repository_uri: ''
+dl_location: ''
+ActivationId: ''
+CustomerId: ''
+
 ...
